[gd_scene load_steps=3 format=3 uid="uid://yd4xvh6vsum3"]

[ext_resource type="Script" path="res://Scenes/UI/PostMatchScreen.gd" id="1_sn62h"]
[ext_resource type="FontFile" uid="uid://4egqoywovijd" path="res://Assets/Visuals/unlearn2.ttf" id="2_rldle"]

[node name="PostMatchScreen" type="ColorRect"]
process_mode = 3
visible = false
offset_left = -20.0
offset_top = -22.0
offset_right = 290.0
offset_bottom = 416.0
color = Color(0, 0, 0, 0.666667)
script = ExtResource("1_sn62h")

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = -91.0
offset_right = 81.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_rldle")
theme_override_font_sizes/font_size = 33
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = -59.0
offset_right = 81.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_rldle")
theme_override_font_sizes/font_size = 24
text = "Score:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayAgainButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = 28.0
offset_right = 61.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_rldle")
text = "Play Again
"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = 70.0
offset_right = 61.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_rldle")
text = "Quit
"

[connection signal="pressed" from="PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
